--- a/src/index.jade
+++ b/src/index.jade
@@ -5,4 +5,5 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/style.css" )
     body
         h1 Jade - node template engine
+        script(type="text/javascript" src="/js/vendor.js")
         script(type="text/javascript" src="/js/bundle.js")
